--- a/Project/ui/cancel_sale.ui
+++ b/Project/ui/cancel_sale.ui
@@ -6,23 +6,98 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>312</width>
-    <height>75</height>
+    <width>380</width>
+    <height>300</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Cancel Sale</string>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>300</height>
+   </size>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="mainVerticalLayout">
+   <property name="spacing">
+    <number>10</number>
+   </property>
+   <property name="leftMargin">
+    <number>10</number>
+   </property>
+   <property name="topMargin">
+    <number>20</number>
+   </property>
+   <property name="rightMargin">
+    <number>10</number>
+   </property>
+   <property name="bottomMargin">
+    <number>30</number>
+   </property>
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QFrame" name="customTitleBar">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <layout class="QHBoxLayout" name="customTitleLayout">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>10</number>
+      </property>
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="customCloseBtn">
+        <property name="toolTip">
+         <string>Close</string>
+        </property>
+        <property name="text">
+         <string>x</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="cancelAllHeaderLabel">
      <property name="text">
-      <string>Do you confirm you want to clear the transactions?</string>
+      <string>Clear all transactions?</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>30</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item>
     <layout class="QHBoxLayout" name="buttonLayout">
@@ -36,16 +111,16 @@
       <number>30</number>
      </property>
      <item>
-      <widget class="QPushButton" name="btnCancel">
+      <widget class="QPushButton" name="btnCancelAllOk">
        <property name="text">
-        <string>Cancel</string>
+        <string>YES</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btnConfirm">
+      <widget class="QPushButton" name="btnCancelAllCancel">
        <property name="text">
-        <string>Confirm</string>
+        <string>CANCEL</string>
        </property>
       </widget>
      </item>
