implement global MAX_TABLE_ROWS enforcement across all sales entry points

--- a/Project/ui/sales_frame.ui
+++ b/Project/ui/sales_frame.ui
@@ -186,14 +186,14 @@
       <item>
        <widget class="QPushButton" name="cancelsaleBtn">
         <property name="text">
-         <string>Cancel All</string>
+         <string>Cancel Sales</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="onholdBtn">
         <property name="text">
-         <string>On Hold</string>
+         <string>Hold Sales</string>
         </property>
        </widget>
       </item>
