--- a/Project/ui/product_menu.ui
+++ b/Project/ui/product_menu.ui
@@ -115,7 +115,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tabAdd">
       <attribute name="title">
@@ -244,14 +244,14 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="0">
+         <item row="5" column="0">
           <widget class="QLabel" name="addCategoryFieldLbl">
            <property name="text">
             <string>Category</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
+         <item row="5" column="1">
           <widget class="QComboBox" name="addCategoryComboBox">
            <property name="minimumSize">
             <size>
@@ -281,14 +281,14 @@
            </item>
           </widget>
          </item>
-         <item row="5" column="0">
+         <item row="6" column="0">
           <widget class="QLabel" name="addUnitFieldLbl">
            <property name="text">
             <string>Unit</string>
            </property>
           </widget>
          </item>
-         <item row="5" column="1">
+         <item row="6" column="1">
           <widget class="QLineEdit" name="addUnitLineEdit">
            <property name="minimumSize">
             <size>
@@ -304,14 +304,14 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="0">
+         <item row="7" column="0">
           <widget class="QLabel" name="addSupplierFieldLbl">
            <property name="text">
             <string>Supplier</string>
            </property>
           </widget>
          </item>
-         <item row="6" column="1">
+         <item row="7" column="1">
           <widget class="QLineEdit" name="addSupplierLineEdit">
            <property name="minimumSize">
             <size>
@@ -320,6 +320,16 @@
             </size>
            </property>
           </widget>
+         </item>
+         <item row="4" column="0">
+          <widget class="QLabel" name="addMarkupFieldLbl">
+           <property name="text">
+            <string>Markup %</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QLineEdit" name="addMarkupLineEdit"/>
          </item>
         </layout>
        </item>
@@ -881,14 +891,14 @@
            </property>
           </widget>
          </item>
-         <item row="10" column="0">
+         <item row="11" column="0">
           <widget class="QLabel" name="updateCategoryFieldLbl">
            <property name="text">
             <string>Category</string>
            </property>
           </widget>
          </item>
-         <item row="10" column="1">
+         <item row="11" column="1">
           <widget class="QComboBox" name="updateCategoryComboBox">
            <property name="minimumSize">
             <size>
@@ -932,14 +942,14 @@
            </property>
           </widget>
          </item>
-         <item row="11" column="0">
+         <item row="12" column="0">
           <widget class="QLabel" name="updateUnitFieldLbl">
            <property name="text">
             <string>Unit</string>
            </property>
           </widget>
          </item>
-         <item row="11" column="1">
+         <item row="12" column="1">
           <widget class="QLineEdit" name="updateUnitLineEdit">
            <property name="minimumSize">
             <size>
@@ -955,14 +965,14 @@
            </property>
           </widget>
          </item>
-         <item row="12" column="0">
+         <item row="13" column="0">
           <widget class="QLabel" name="updateSupplierFieldLbl">
            <property name="text">
             <string>Supplier</string>
            </property>
           </widget>
          </item>
-         <item row="12" column="1">
+         <item row="13" column="1">
           <widget class="QLineEdit" name="updateSupplierLineEdit">
            <property name="minimumSize">
             <size>
@@ -972,14 +982,14 @@
            </property>
           </widget>
          </item>
-         <item row="13" column="0">
+         <item row="14" column="0">
           <widget class="QLabel" name="updateLastUpdatedFieldLbl">
            <property name="text">
             <string>Last updated</string>
            </property>
           </widget>
          </item>
-         <item row="13" column="1">
+         <item row="14" column="1">
           <widget class="QLineEdit" name="updateLastUpdatedLineEdit">
            <property name="minimumSize">
             <size>
@@ -1026,6 +1036,16 @@
          </item>
          <item row="3" column="1">
           <widget class="QLineEdit" name="updateNameSearchLineEdit"/>
+         </item>
+         <item row="10" column="0">
+          <widget class="QLabel" name="updateMarkupFieldLbl">
+           <property name="text">
+            <string>Markup %</string>
+           </property>
+          </widget>
+         </item>
+         <item row="10" column="1">
+          <widget class="QLineEdit" name="updateMarkupLineEdit"/>
          </item>
         </layout>
        </item>
