--- a/Project/ui/vegetable_menu.ui
+++ b/Project/ui/vegetable_menu.ui
@@ -618,7 +618,7 @@
        <item row="8" column="1">
         <widget class="QLineEdit" name="vegMCategoryLineEdit">
          <property name="placeholderText">
-             <string>-- As per Vegetable selection --</string>
+          <string>-- As per Vegetable selection --</string>
          </property>
         </widget>
        </item>
@@ -700,7 +700,7 @@
           </font>
          </property>
          <property name="text">
-          <string>ADD</string>
+          <string>ADD / UPDATE</string>
          </property>
         </widget>
        </item>
